// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WidgetLoadingFallback Snapshot Tests renders correctly with default props 1`] = `
<DocumentFragment>
  <span
    aria-busy="true"
    class="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorPrimary css-1wxecgq-MuiCircularProgress-root"
    data-testid="SPINNER_CIRCULAR_PROGRESS"
    role="progressbar"
    style="width: 40px; height: 40px;"
  >
    <svg
      class="MuiCircularProgress-svg css-54pwck-MuiCircularProgress-svg"
      viewBox="22 22 44 44"
    >
      <circle
        class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate css-960umw-MuiCircularProgress-circle"
        cx="44"
        cy="44"
        fill="none"
        r="20.2"
        stroke-width="3.6"
      />
    </svg>
  </span>
</DocumentFragment>
`;

exports[`WidgetLoadingFallback Snapshot Tests renders with custom size and color 1`] = `
<DocumentFragment>
  <span
    aria-busy="true"
    class="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorSecondary css-w58ak0-MuiCircularProgress-root"
    data-testid="SPINNER_CIRCULAR_PROGRESS"
    role="progressbar"
    style="width: 60px; height: 60px;"
  >
    <svg
      class="MuiCircularProgress-svg css-54pwck-MuiCircularProgress-svg"
      viewBox="22 22 44 44"
    >
      <circle
        class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate css-960umw-MuiCircularProgress-circle"
        cx="44"
        cy="44"
        fill="none"
        r="20.2"
        stroke-width="3.6"
      />
    </svg>
  </span>
</DocumentFragment>
`;
